Added titles, Google Fonts links and navigation bars to first 2 pages

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
  <nav>
   <ul>
    <li><a href = "Game Info">Game Info</a></li>
-   <li>Scottish Wildlife Trust</li>
+   <li><a href = "ScottishWildlifeTrust.html">Scottish Wildlife Trust</a></li>
    <li>Developer</li>
    <li>Behind the Scences</li>
    <li>Fife College</li>
