Added navigation bar to Developer page

--- a/Developer.html
+++ b/Developer.html
@@ -5,4 +5,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
  </head>
+    
+<body>
+<nav>
+  <ul>
+   <li><a href = "Index.html">Index</a></li>
+   <li><a href = "GameInfo.html">Game Info</a></li>
+   <li><a href = "ScottishWildlifeTrust.html">Scottish Wildlife Trust</a></li>
+   <li>Behind the Scences</li>
+   <li>Fife College</li>
+  </ul>
+</nav>    
+
+</body>
 </html>
