Fixed all navigation bars

--- a/Developer.html
+++ b/Developer.html
@@ -15,8 +15,8 @@
    <li><a href = "Index.html">Index</a></li>
    <li><a href = "GameInfo.html">Game Info</a></li>
    <li><a href = "ScottishWildlifeTrust.html">Scottish Wildlife Trust</a></li>
-   <li>Behind the Scences</li>
-   <li>Fife College</li>
+   <li><a href = "BTS.html">Behind the Scences</a></li>
+   <li><a href = "FifeCollege.html">Fife College</a></li>
   </ul>
 </nav>    
 
