--- a/ScottishWildlifeTrust.html
+++ b/ScottishWildlifeTrust.html
@@ -15,9 +15,9 @@
   <ul>
    <li><a href = "Index.html">Index</a></li>
    <li><a href = "GameInfo.html">Game Info</a></li>
-   <li>Developer</li>
-   <li>Behind the Scences</li>
-   <li>Fife College</li>
+   <li><a href = "Developer.html">Developer</a></li>
+   <li><a href = "BTS.html">Behind the Scences</a></li>
+   <li><a href = "FifeCollege.html">Fife College</a></li>
   </ul>
 </nav>     
     
