--- a/BTS.html
+++ b/BTS.html
@@ -15,8 +15,8 @@
    <li><a href = "Index.html">Index</a></li>
    <li><a href = "GameInfo.html">Game Info</a></li>
    <li><a href = "ScottishWildlifeTrust.html">Scottish Wildlife Trust</a></li>
-   <li><a href = "BTS.html">Behind the Scenes</a></li>
-   <li>Fife College</li>
+   <li><a href = "Developer.html">Developer</a></li>
+   <li><a href = "FifeCollege.html">Fife College</a></li>
   </ul>
 </nav>  
     
