--- a/GameInfo.html
+++ b/GameInfo.html
@@ -14,9 +14,9 @@
   <ul>
    <li><a href = "Index.html">Index</a></li>
    <li><a href = "ScottishWildlifeTrust.html">Scottish Wildlife Trust</a></li>
-   <li>Developer</li>
-   <li>Behind the Scences</li>
-   <li>Fife College</li>
+   <li><a href = "Developer.html">Developer</a></li>
+   <li><a href = "BTS.html">Behind the Scences</a></li>
+   <li><a href = "FifeCollege.html">Fife College</a></li>
   </ul>
 </nav> 
 
