--- a/Developer.html
+++ b/Developer.html
@@ -20,7 +20,9 @@
   </ul>
 </nav>    
 
-<h2>Developer</h2>    
+<h2>Developer</h2>
+    
+<p>I have always had a great love of games and it brings me great joy to share my first game with people who share the same passion as I have. I was only 10 years old when Flappy bird first released, and to think I am now able to create a game that pays tribute to that makes me greatly happy, in its time it dominated the app stores and for good reason, it was addictive; Infuriating at times however, users would always go back for another shot of beating their old high scores.</p>    
     
 </body>
 </html>
