Fixed navbar error on Index page

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 
  <nav>
   <ul>
-   <li><a href = "Game Info">Game Info</a></li>
+   <li><a href = "GameInfo.html">Game Info</a></li>
    <li><a href = "ScottishWildlifeTrust.html">Scottish Wildlife Trust</a></li>
    <li><a href = "Developer.html">Developer</a></li>
    <li><a href = "BTS.html">Behind the Scences</a></li>
