Game Info paragraph added

--- a/GameInfo.html
+++ b/GameInfo.html
@@ -20,7 +20,9 @@
   </ul>
 </nav> 
 
-<h2>Game Information</h2>    
+<h2>Game Information</h2>
+    
+<p>This game was made with the purpose of spreading awareness for the Scottish Wildlife Trust. The goal is to provide a simple and fun game suitable for a younger audience to play so that the message of what the trust aims to achieve; through this form of advertisement, the orginisation will now reach a wider demographic which can strengthen the plans they wish to carry out.</p>    
 
 </body>
     
