Added images to Scottish Wildlife Trust page

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,10 @@
 
   <h2 class = "welcomeh">Welcome</h2>
 
-  <p class = "welcomep">Welcome to the Forest Flight website, a page dedicated to displaying the efforts made to provide the best gaming experience possible. On this site you can find information on a range of different topics from the Scottish Wildlife trust to the behind the scenes of the game creation process. Feel free to browse and learn more about the game and my journey of bringing the project to life. Thank you for visiting this site!</p>
+  <p class = "welcomep">Welcome to the Forest Flight website, a page dedicated to displaying the efforts made to provide the best gaming experience possible.<br>
+  On this site you can find information on a range of different topics from the Scottish Wildlife trust to the behind the scenes of the game creation process.<br>
+  Feel free to browse and learn more about the game and my journey of bringing the project to life.<br>
+  Thank you for visiting this site!</p>
 
  </main>
  
