Added image and aligned text on BTS page

--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,10 @@
   </head>
  
 
-  <header class = "titlediv">  
+  <header class = "titlediv">   
+   <img class = "shield" src = "Shield%20Logo.png" width="200" height="300">
    <h1 class = "title">Forest Flight</h1>
-  </header>    
+  </header>     
 
  <nav>
   <ul>
