--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,11 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
 
   <head>
+      
+  <meta charset="utf-8"/>    
+      
    <title>Forest Flight</title>
    <link href="Index.css" rel="stylesheet" type="text/css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
